Version 2.0 - 2018-04-13
Version 1.14 - 2017-11-09
* OTH#0000 Statement creation wizard no longer requires invoices

Version 1.12 - 2017-04-28
* FEA#0000 Cancel button on statement could be confused with the action to close the window
* FEA#0000 Cancel button on statement could be confused with the action to close the window so the action is not displayed any more on the form view but in the action toolbar
* FEA#0000 Add statement creation wizard

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Add feature: cashing cancel

Version 1.6 - 2015-12-23
* FEA#0000 Add payer party on statement line

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Fill statement name with a sequence
* FEA#0000 Add manual validation on statement

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation