@@ -1,3 +1,5 @@
+* BUG#9561 Ajout des droits sur les nouveaux modèles de tryton 4.8
+
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
 * OTH#0000 L'assistant de création des relevés ne requiert plus de quittances
